# CryptoLink

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_REPORT.md  build.sh  full_test.sh  install_deps.sh
examples/: client.cpp  crypto_test.cpp  network_test.cpp  server.cpp  signature_test.cpp  simple_test.cpp
include/: AESKey.h  AsymmetricalEncryptionInterface.h  CryptoWebSocketClient.h  CryptoWebSocketServer.h  RSAKey.h  SymmetricalEncryptionInterface.h
src/: AESKey.cpp  CryptoWebSocketClient.cpp  CryptoWebSocketServer.cpp  RSAKey.cpp
